PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_Backorder_OTC__c.object
<CustomObject>
    <fields>
        <fullName>Back_Order_Date_Text__c</fullName>
        <description>Created for Testing Purpose. Need to Delete it</description>
        <label>Back Order Date Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Order_Qty__c</fullName>
        <label>Back Order Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Average_Forecast__c</fullName>
        <label>Average Forecast</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Back_Order_Value__c</fullName>
        <label>Back Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Backorder_Qty__c</fullName>
        <label>Backorder Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Backorder_Report_Date__c</fullName>
        <label>Backorder Report Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Count__c</fullName>
        <label>Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Forecast_Last_Month__c</fullName>
        <label>Current Forecast Last Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Month_Total_Monthly_Order__c</fullName>
        <label>Current Month Total Monthly Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Order_Qty__c</fullName>
        <label>Current Order Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Hash_Key__c</fullName>
        <description>This field is created for uniqueness</description>
        <label>GCP Hash Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Gcp_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Inventory_in_QA__c</fullName>
        <label>Inventory in QA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Inventory_in_Transit__c</fullName>
        <label>Inventory in Transit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_MoH__c</fullName>
        <label>MoH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Moh_Week1__c</fullName>
        <label>Moh Week1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Moh_Week2__c</fullName>
        <label>Moh Week2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Moh_Week3__c</fullName>
        <label>Moh Week3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Value__c</fullName>
        <label>Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Pct_Current_Forecast__c</fullName>
        <label>Pct Current Forecast</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Vision_GCP_Backorder_OTC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Short_Term_Forecast_Current_Month__c</fullName>
        <label>Short Term Forecast Current Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Short_Term_Forecast__c</fullName>
        <label>Short Term Forecast</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Short_term_adjustment__c</fullName>
        <label>Short Term Adjustment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sku_Code__c</fullName>
        <label>Sku_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Stocks_at_UPS__c</fullName>
        <label>Stocks at UPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Open_Order_Qty__c</fullName>
        <label>Total Open Order Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unit_Sales_Value__c</fullName>
        <label>Unit Sales Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week1_Qty__c</fullName>
        <label>Week1 Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week2_Qty__c</fullName>
        <label>Week2 Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week3_Qty__c</fullName>
        <label>Week3 Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week_1__c</fullName>
        <label>Week 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week_2__c</fullName>
        <label>Week 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Week_3__c</fullName>
        <label>Week 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_current_month__c</fullName>
        <label>Current Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_last_month__c</fullName>
        <label>Last Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_last_month_forecast__c</fullName>
        <label>Last Month Forecast</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCP Backorder OTC</label>
    <nameField>
        <displayFormat>backorder-OTC-{0000000}</displayFormat>
        <label>GCP Backorder OTC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Backorder OTCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>